_k8s/spinnaker-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: niveus-helloworld-svc
  labels:
    app: niveus-helloworld
spec:
  ports:
  - name: http
    port: 4999
    targetPort: 4998
  selector:
    app: niveus-helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niveus-hello-world-deployment
  labels:
    app: niveus-helloworld
  namespace: '${ parameters.namespace }'
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: niveus-helloworld
  template:
    metadata:
      labels:
        app: niveus-helloworld
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      imagePullSecrets:
      - name: dockerhub
      containers:
      - image: atmohsin/hello-world:${ parameters.dockertag } # possible artifact
        name: hello-world
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "10m"
            memory: "25Mi"
          requests:
            cpu: "10m"
            memory: "25Mi"
        ports:
        - containerPort: 4998
          name: liveness-port
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          initialDelaySeconds: 3
          periodSeconds: 5
        # envFrom:
        # - configMapRef:
        #     name: airwave-hello-world
      restartPolicy: Always
